[package]
name = "progression_cli"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["cargo"] }
colored = "3.0.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
rpassword = "7.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
